# tasmota-faker-docker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  server.py
scripts/: spawn-devices.sh
tasmota_faker/: __init__.py
templates/: sample.json.jinja
