[tool.poetry]
name = "tasmota-faker"
version = "0.1.0"
description = "Fake server for Tasmota to simulate devices"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tasmota_faker"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
